--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "jade-mailer",
 	"description": "A Jade template driven email generator. It's \"bring your own mailer\", so provide any mailer instance that conforms to node-mailers interface for sendMail() method.",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"author": "Anthony Hildoer <anthony@bluerival.com>",
 	"repository": {
 		"type": "git",
 		"url": "git@github.com:BlueRival/jade-mailer.git"
 	},
 	"dependencies": {
-		"jade": "~1.3",
-		"promised-io": "~0.3"
+		"async": "~0.2",
+		"jade": "~1.3"
 	},
 	"keywords": [
 		"mailer",
